objects/College__c.object
<CustomObject>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CSE</fullName>
                </value>
                <value>
                    <fullName>ECE</fullName>
                </value>
                <value>
                    <fullName>MECH</fullName>
                </value>
                <value>
                    <fullName>CIVIL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Feedback__c</fullName>
        <label>Feedback</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Field1__c</fullName>
        <defaultValue>true</defaultValue>
        <label>?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parent_field2__c</fullName>
        <label>Parent field2</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Subject__c</fullName>
        <label>Subject</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Department__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Signals and systems ECE</fullName>
                </value>
                <value>
                    <fullName>Electromagnetic transmission lines ECE</fullName>
                </value>
                <value>
                    <fullName>Strength of materials CIVIL</fullName>
                </value>
                <value>
                    <fullName>Concrete technology CIVIL</fullName>
                </value>
                <value>
                    <fullName>Machine drawing MECH</fullName>
                </value>
                <value>
                    <fullName>Thermal Engineering MECH</fullName>
                </value>
                <value>
                    <fullName>Computer Networks CSE</fullName>
                </value>
                <value>
                    <fullName>DBMS CSE</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Test__c</fullName>
        <label>Test</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Test 1</fullName>
                </value>
                <value>
                    <fullName>Test 2</fullName>
                </value>
                <value>
                    <fullName>Test 3</fullName>
                </value>
                <value>
                    <fullName>Test 4</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>parent_field1__c</fullName>
        <label>parent field1</label>
        <length>100</length>
        <type>Text</type>
    </fields>
    <label>College</label>
    <nameField>
        <label>College Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Colleges</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>